<li> 3-loop RGEs and 2-loop corrections to gluino/sparticle masses now always compiled. 2-loop scalar RGEs used for RPC by default.
<li> Made quark mixing parameter MIXING an object parameter in MssmSusy object. Use setMixing() and displayMixing() methods. User-set electroweak symmetry breaking scale QEWSB now moved into MssmSoftsusy object: use setQewsb() and displayQewsb().